# ToyEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Common.cmake  DXC.cmake  README.md  compile_commands.json  format_out.bytes  shadertoolsconfig.json
src/: CMakeLists.txt
src/Test/: CMakeLists.txt  test-algin.cpp
src/cmake/: ToyEngine.cmake.in
src/core/: CMakeLists.txt
src/core/basic/: CMakeLists.txt
src/core/basic/interface/: Align.hpp  Atomics.hpp  CommonDefines.hpp  FormatString.hpp  IAllocator.hpp  IDataBlob.hpp  IObject.hpp  IReferenceCounter.hpp  InterfaceUUID.hpp  Logger.hpp  SpinLock.hpp
src/core/basic/src/: SpinLock.cpp
src/core/common/: Align.hpp  App.cpp  App.hpp  AppArgs.hpp  CMakeLists.txt  DebugUtility.hpp  DefaultMemoryAllocator.cpp  DefaultMemoryAllocator.hpp  EngineUtility.hpp  FormatString.hpp  GfxArgs.hpp  GlobalEnvironment.hpp  HashUtils.hpp  Logger.hpp  STDAllocator.hpp  Time.cpp  VariableSizeAllocationsManager.cpp  VariableSizeAllocationsManager.hpp
src/core/common/interface/: AppArgs.hpp  CStringTool.hpp  CommandLineParse.hpp  CommonDefines.hpp  DataBlob.hpp  DebugUtility.hpp  DefaultMemoryAllocator.hpp  EngineSetting.hpp  FormatString.hpp  GlobalEnvironment.hpp  IAllocator.hpp  IObject.hpp  ISceneAsset.hpp  ISystem.hpp  LoadDll.hpp  RefCountPtr.hpp  RefCountWeakPtr.hpp  ReferenceCounter.hpp  ReferenceCounterObject.hpp  STDAllocator.hpp  TObject.hpp  Time.hpp  VariableSizeAllocationsManager.hpp  pch.hpp
src/core/common/src/: Common.def  DLLMain.cpp  DataBlob.cpp  DefaultMemoryAllocator.cpp  GlobalEnviroment.cpp  Time.cpp  VariableSizeAllocationsManager.cpp
src/core/components/: App.cpp  App.hpp  CMakeLists.txt  SystemMgr.cpp  SystemMgr.hpp
src/core/graphics/: CMakeLists.txt  GPUResource.hpp  GraphicsDef.hpp  Pipeline.cpp  Pipeline.hpp  PipelineFragment.cpp  PipelineFragment.hpp  ShaderTools.hpp  UploadBuffer.hpp
src/core/graphics/d3d12/: CMakeLists.txt  DXCCompiler.hpp  DescriptorMemoryMgr.cpp  DescriptorMemoryMgr.hpp  Fence_D3D12.hpp  FrameResource_D3D12.cpp  GPUResource_D3D12.cpp  GPUResource_D3D12.hpp  GraphicsCommandList_D3D12.cpp  GraphicsCommandList_D3D12.hpp  GraphicsCommandQueue_D3D12.cpp  GraphicsCommandQueue_D3D12.hpp  Graphics_D3D12.cpp  Graphics_D3D12.hpp  PipelineState.cpp  PipelineState.hpp  Pipeline_D3D12.hpp  RootSignature.hpp  SwapChain_D3D12.cpp  SwapChain_D3D12.hpp  UploadBuffer_D3D12.cpp  UploadBuffer_D3D12.hpp  Utility.hpp
src/core/graphics/d3d12/include/: CommandContext.hpp  CommandQueueD3D12.hpp  D3D12MemAlloc.hpp  D3D12TypeTraits.hpp  DescriptorHeap.hpp  DeviceContextD3D12.hpp  FenceD3D12.hpp  FrameReource_D3D12.hpp  GPUResourceD3D12.hpp  GraphicsCommandQueueD3D12.hpp  GraphicsD3D12.hpp  Graphics_D3D12.hpp  MaterialD3D12.hpp  PipelineState.hpp  PipelineStateD3D12.hpp  RenderDeviceD3D12.hpp  ShaderResourcesMaping.hpp  SwapChainD3D12.hpp  SwapChain_D3D12.hpp
src/core/graphics/d3d12/interface/: DXCCompileArgs.hpp  DXCCompiler.hpp  ICommandQueueD3D12.hpp  ID3D12Factory.hpp  IDeviceContextD3D12.hpp  IPipelineStateD3D12.hpp  IRenderDeviceD3D12.hpp  ISwapChainD3D12.hpp  Shader.hpp  ShaderD3D12.hpp  ShaderInfos.hpp  ShaderResourceVariable.hpp  ShaderResources.hpp  Utility.hpp
src/core/graphics/d3d12/src/: CommandContext.cpp  CommandQueueD3D12.cpp  D3D12Factory.cpp  D3D12MemAlloc.cpp  DLLMain.cpp  DXCCompiler.cpp  DescriptorHeap.cpp  FenceD3D12.cpp  Fence_D3D12.cpp  GraphicsCommandList_D3D12.cpp  GraphicsCommandQueueD3D12.cpp  GraphicsCommandQueue_D3D12.cpp  GraphicsD3D12.cpp  GraphicsD3D12.def  Graphics_D3D12.cpp  MaterialsD3D12.cpp  PipelineState.cpp  PipelineStateD3D12.cpp  RenderDeviceD3D12.cpp  RootSignature.cpp  Shader.cpp  ShaderD3D12.cpp  SwapChainD3D12.cpp  UploadBuffer_D3D12.cpp
src/core/graphics/graphicsbasic/: CMakeLists.txt
src/core/graphics/graphicsbasic/include/: Pipeline.hpp
src/core/graphics/graphicsbasic/interface/: DeviceContextBase.hpp  DeviceObject.hpp  IBuffer.hpp  ICommandQueue.hpp  IDXCCompiler.hpp  IDeviceContext.hpp  IFence.hpp  IFrameResource.hpp  IGPUResource.hpp  IGraphics.hpp  IGraphicsCommandList.hpp  IGraphicsCommandQueue.hpp  IMaterials.hpp  IPipeline.hpp  IPipelineFragmentHandler.hpp  IPipelineState.hpp  IRenderDevice.hpp  IShader.hpp  ISwapChain.hpp  (+9 more)
src/core/graphics/interface/: CMakeLists.txt  IFrameResource.hpp  IGPUResource.hpp  IGraphics.hpp  IGraphicsCommandList.hpp  IGraphicsCommandQueue.hpp  IPipeline.hpp  ISwapChain.hpp  IUploadBuffer.hpp
src/core/interface/: CStringTool.hpp  GlobalEnvironment.hpp  IAllocator.hpp  IApp.hpp  IBaseScene.hpp  IObject.hpp  ISceneAsset.hpp  IShader.hpp  ISystem.hpp
src/core/platform/: CMakeLists.txt
src/core/platform/base/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/components/: CMakeLists.txt
src/engine/components/base/: CMakeLists.txt
src/engine/platform/: CMakeLists.txt
src/engine/platform/base/: CMakeLists.txt
src/engine/platform/windows/: CMakeLists.txt
src/include/: Def.hpp  Engine.h  EngineUtility.hpp  pch.hpp
src/platform/: CMakeLists.txt  Platform.hpp
src/platform/windows/: CMakeLists.txt  D3D12App.cpp  D3D12App.hpp  Platform_Win.cpp  WinApp.cpp  WinApp.hpp
src/scripts/: install.bat
test/: CMakeLists.txt  CMakeSettings.json  compile_commands.json  shadertoolsconfig.json
test/align/: CMakeLists.txt  test-align.cpp
test/apiTest/: CMakeLists.txt
test/apiTest/src/: main.cpp  test-DXCCompiler.cpp  test-DebugUtility.cpp  test-FormatString.cpp  test-Logger.cpp  test-VariableSizeAllocationsManager.cpp  test-align.cpp
test/helloTriangle/: CMakeLists.txt  CMakePresets.json  RenderLogic.hpp  Scene.hpp  test-hello-triangle.cpp
test/hellowindow/: CMakeLists.txt  CMakePresets.json  test-hello-window.cpp
test/samples/: CMakeLists.txt
test/samples/helloGraphics/: CMakeLists.txt  hello_graphics.cpp
test/samples/helloTriangle/: RenderLogic.hpp  Utility.hpp  test-hello-triangle.cpp
test/samples/testCom/: CMakeLists.txt  Time.hpp  test-TimerInDll.cpp
test/testUtility/: CMakeLists.txt
test/testUtility/include/: TestEnv.hpp
test/testUtility/src/: TestEnv.cpp
(+194 files in other folders)
